fixed a style bug in the post map where the font was too small

--- a/_sass/modules/_post-map.scss
+++ b/_sass/modules/_post-map.scss
@@ -10,11 +10,4 @@
   &:not(.post-image--fullsize) {
     @include outer-container;
   }
-
-  p {
-    color: $gray-dark;
-    font-size: 0.75rem;
-    margin-top: 0.25rem;
-    text-align: center;
-  }
 }
